swagger.yaml represents
